--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -38,7 +38,7 @@ main {
 }
 
 /* grid 1st column styling */
-.hero-image{
+.hero-image {
     width: 600px;
 }
 
@@ -57,7 +57,7 @@ main {
 
 .para-style {
     font-size: 1.5rem;
-    margin-bottom: 2.4rem;  
+    margin-bottom: 2.4rem;
 }
 
 .btn-primary {
@@ -72,6 +72,7 @@ main {
     background-color: hsl(300, 69%, 71%);
     border: 1px solid hsl(300, 69%, 71%);
     color: #fff;
+    cursor: pointer;
 }
 
 .links-share {
@@ -94,4 +95,64 @@ main {
 .links-style:hover {
     border: 1px solid hsl(300, 69%, 71%);
     color: hsl(300, 69%, 71%);
+    cursor: pointer;
+}
+
+@media (max-width:76em) {
+    main {
+        background: url(images/bg-mobile.svg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0;
+    }
+
+    .grid-section {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 0;
+        padding-bottom: 0;
+    }
+
+    /* .hero-image {
+        width: 400px;
+    }
+
+    .links-share {
+        top: 105%;
+        left: 39%;
+    } */
+}
+
+@media (max-width: 30em) {
+    main {
+        /* min-height: 10vh; */
+        background-size: contain;
+        padding: 0 2rem 2rem 2rem;
+    }
+
+    .logo {
+        width: 150px;
+    }
+
+    .grid-section {
+        gap: 4rem;
+    }
+
+    .hero-image {
+        width: 325px;
+    }
+
+    .links-share {
+        top: 112%;
+        left: 33%;
+    }
+
+    .heading-style {
+        font-size: 2.4rem;
+    }
+
+    .para-style {
+        font-size: 1.2rem;
+    }
 }
